0024176: Array out-of-bound error in Vrml loader (test bugs moddata_3 bug23023)

Code assigning normals to nodes of triangulation corrected to use correct index of the node and avoid array out-of-bound errors.